--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,13 @@
 <div class="container-fluid" style="overflow-y: hidden;">
     <div class="row" style="background-color: #005172;  position:static">
         <div class="col-10">
+            <button mat-button (click)="reload('TUTTI') " style="color: white;">TUTTI</button>
             <button mat-button (click)="reload('UOMO') " style="color: white;">UOMO</button>
             <button mat-button (click)="reload('DONNA') " style="color: white;">DONNA</button>
             <button mat-button (click)="reload('BAMBINI') " style="color: white;">BAMBINI</button>
         </div>
         <div class="col-2">
-            <button mat-button class="ml-auto" style="color: white;" (click)="add()">Aggiungi Vestito</button>
+            <button mat-button class="ml-auto" style="color: white;" (click)="add()">AGGIUNGI VESTITO</button>
         </div>
     </div>
 
@@ -59,7 +60,9 @@
         <div class="row">
             <div class="col">
                 <div class="row">
-                    <mat-spinner *ngIf="clothes==null"></mat-spinner>
+                    <div class="col-12 wrapper" *ngIf="clothes==null" style="margin-left: 45%; margin-top: 5%;">
+                        <mat-spinner class="inner" *ngIf="clothes==null"></mat-spinner>
+                    </div>
                     <div class="col-md-2 mx-auto my-5 " *ngFor="let article of getFilteredClothes()">
                         <mat-card class="mat-elevation-z4 " (click)="openDialog(article)" style="justify-content: center; position: flex;" align="center">
                             <mat-card-header style="justify-content: center; display: flex;">
