--- a/src/app/feedback-page/feedback-page.component.html
+++ b/src/app/feedback-page/feedback-page.component.html
@@ -26,7 +26,7 @@
                     {{ element.descrizione }}
                 </td>
             </ng-container>
-            <ng-container matColumnDef="action">
+            <ng-container matColumnDef="action" *ngIf="isAdmin">
                 <th mat-header-cell *matHeaderCellDef style="color: black;">Azione</th>
                 <td mat-cell *matCellDef="let element">
                     <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
