placeholder and align

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -20,7 +20,7 @@
                                 <p>
                                     <mat-form-field appearance="outline" class="full_width-input">
                                         <mat-label>Username</mat-label>
-                                        <input matInput placeholder="n.cognome" formControlName="username" />
+                                        <input matInput placeholder="Username" formControlName="username" />
                                         <mat-error *ngIf=" f.username.errors && f.username.errors.required ">Lo username è obbligatorio</mat-error>
                                     </mat-form-field>
                                 </p>
@@ -103,7 +103,7 @@
                                 <p>
                                     <mat-form-field appearance="outline" class="full_width-input">
                                         <mat-label>Username</mat-label>
-                                        <input matInput placeholder="n.cognome" formControlName="username" />
+                                        <input matInput placeholder="Username" formControlName="username" />
                                         <mat-error *ngIf=" freg.username.errors && freg.username.errors.required ">Lo username è obbligatorio</mat-error>
                                     </mat-form-field>
                                 </p>
