--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
             <button mat-button (click)="reload('BAMBINI') " style="color: white;">BAMBINI</button>
         </div>
         <div class="col-2">
-            <button mat-button class="ml-auto" style="color: white;" (click)="add()">AGGIUNGI VESTITO</button>
+            <button mat-button class="float-right" style="color: white;" (click)="add()">AGGIUNGI VESTITO</button>
         </div>
     </div>
 
