--- a/src/app/dialog-info-mitt/dialog-info-mitt.component.html
+++ b/src/app/dialog-info-mitt/dialog-info-mitt.component.html
@@ -1,4 +1,4 @@
-<div class="container" *ngIf="done">
+<div class="container-fluid" *ngIf="done" style="overflow: hidden;">
     <h1 [align]="'center'"><b>{{user.username}}</b></h1>
     <h2 [align]="'center'"><b>Feedback</b></h2>
     <h4 [align]="'center'"><b>Media voti:{{vote}}</b></h4>
