--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,7 +11,7 @@
         </div>
     </div>
 
-    <div class="row card">
+    <div class="row card" style="overflow: hidden;">
         <div class="card-header" style="background-color: white !important;">
             <div class="example-container">
                 <mat-form-field appearance="outline" class="col-2 full_width-input ">
