--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -158,7 +158,7 @@
                         </div>
                         <div class="row justify-content-center">
                             <div class="col-xxl-10 col-xl-12 col-lg-11 col-md-10 col-sm-11 col-12" align="center">
-                                <p *ngIf="error" class="error-message">{{ error }}</p>
+                                <p *ngIf="error2" class="error-message">{{ error2 }}</p>
                             </div>
                         </div>
                         <div class="row justify-content-center pt-1 pb-3">
