--- a/src/app/feedback-page/feedback-page.component.html
+++ b/src/app/feedback-page/feedback-page.component.html
@@ -1,7 +1,9 @@
 <div class="row pt-2" style="width: 80%; margin-left: 10%;">
     <div class="row justify-content-center">
         <div class="col">
-            <h1 id="modal-title" align="center">Feedback</h1>
+            <h1 id="modal-title" align="center">Feedback
+                <mat-icon>chat</mat-icon>
+            </h1>
         </div>
 
     </div>
