--- a/src/app/setting/setting.component.html
+++ b/src/app/setting/setting.component.html
@@ -10,6 +10,11 @@
                         </mat-card-title>
                         <mat-card-subtitle>Cliccando sul singolo riquadro, puoi modificare le tue informazioni!
                         </mat-card-subtitle>
+                        <mat-card-subtitle><b>Ranking: </b>{{ranking}}
+                        </mat-card-subtitle>
+                        <mat-card-subtitle>
+                            <button mat-button type="button" color="primary" (click)="infoMitt()">Visualizza tutti i feedback</button>
+                        </mat-card-subtitle>
                     </mat-card-header>
                     <mat-card-content>
                         <mat-accordion>
